tests/neg-custom-args/captures/i23850.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23850.scala:15:46 ---------------------------------------
15 |  val addWritesToConsole: (Int, Int) -> Int = (a, b) => // error
   |                                              ^
   |Found:    (a: Int, b: Int) ->{test} Int
   |Required: (Int, Int) -> Int
   |
   |Note that capability `any` cannot flow into capture set {}.
   |
   |Note that capability `test` cannot flow into capture set {}.
   |Note that object test is a capability because it contains fields given instance given_Console
   |
   |where:    any is a root capability classified as SharedCapability in the type of object test with contributing field val given_Console
   |
16 |    log(s"adding a ($a) to b ($b)")
17 |    a + b
   |
   | longer explanation available when compiling with `-explain`
